--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-motion-scroll",
-  "name": "react-motion-scroll",
+  "short_name": "react-motion-animate",
+  "name": "react-motion-animate",
   "icons": [
     {
       "src": "favicon.ico",
