--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "react-motion-animate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Animate react components as they scroll in and out of view",
+  "keywords": [
+    "react animation",
+    "react",
+    "animation",
+    "framer"
+  ],
   "author": "suhmantha1",
   "license": "MIT",
   "repository": "suhmantha1/react-motion-animate",
