--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-motion-animate",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Animate react components as they scroll in and out of view",
   "keywords": [
     "react animation",
@@ -10,6 +10,7 @@
   ],
   "author": "suhmantha1",
   "license": "MIT",
+  "homepage": "https://suhmantha1.github.io/react-motion-animate/",
   "repository": "suhmantha1/react-motion-animate",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
