--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react animation",
     "react",
     "animation",
-    "framer"
+    "framer",
+    "scroll animations",
+    "scroll reveal"
   ],
   "author": "suhmantha1",
   "license": "MIT",
