--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-motion-animate",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Animate react components as they scroll in and out of view",
   "keywords": [
     "react animation",
@@ -18,7 +18,7 @@
   "module": "dist/index.modern.js",
   "source": "src/index.js",
   "engines": {
-    "node": ">=10"
+    "node": ">=16"
   },
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
@@ -33,14 +33,14 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.18.2",
@@ -50,16 +50,18 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "framer-motion": "^2.9.4"
+    "framer-motion": "^9.0.1"
   }
 }
